# Guthi-Core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  guthi  setup.bat
Network/: main.go
Platform/: .clang-format  CMakeLists.txt
Platform/src/: main.cpp
Platform/src/event/: event.cpp  event.hpp
Platform/src/filesystem/: cache.cpp  fs.cpp  fs.hpp  network_fs.hpp
include/: guthi.hpp
src/: CMakeLists.txt  guthi_exec  main.cpp  newtext.txt  test.txt
src/core/: c_api.cpp  c_api.h  c_api.hpp  error.cpp  error.hpp  read_sharedmemory.hpp
src/daemon/: create_lib.bat  create_lib.sh  daemon_api.hpp  daemon_lib.cpp  daemon_protocol.h  linux_pipe.cpp  pipe.hpp  runtime.cpp  runtime_client.cpp  start.sh  win32_daemon_impl.cpp  win32_pipe.cpp
src/event/: event.cpp  event.h  event.hpp
src/filesystem/: cache.cpp  file_track.cpp  file_track.hpp  file_track_linux.cpp  fs.cpp  fs.hpp  network_fs.hpp  serialize_fs.cpp  serialize_fs.hpp
src/runtime/: Pdh.h  parser_cpuinfo.cpp  parser_cpuinfo.hpp  sys_info.cpp  sys_info.h  sys_info.hpp
src/shared_memory/: script.sh  semaphore.hpp  shm.cpp  shm.h
